# camelot

./: .coveragerc  .editorconfig  .gitignore  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  HISTORY.md  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  basic.py  camelot.py  cell.py  lattice.py  morph_transform.py  pdf.py  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  spreadsheet.py  stream.py  table.py  utils.py
.devcontainer/: Dockerfile  devcontainer.json
camelot/: __init__.py  __main__.py  __version__.py  cell.py  cli.py  core.py  handlers.py  image_ops.py  image_processing.py  imgproc.py  io.py  lattice.py  ocr.py  parsers.py  pdf.py  plot.py  plotting.py  stream.py  table.py  utils.py
camelot/parsers/: __init__.py  base.py  lattice.py  stream.py
debug/: hough_opencv.py  hough_skimage.py  houghp_skimage.py  morph_transform.py  plot_geo.py  plot_intensity.py  threshold.py
debug/camelot_scripts/: hough_opencv.py  hough_skimage.py  houghp_skimage.py  morph_transform.py  print_text.py
docs/: Makefile  api.rst  conf.py  contributing.rst  index.rst  lattice.rst  make.bat  stream.rst
docs/_templates/: hacks.html  sidebarintro.html  sidebarlogo.html
examples/: demo_lattice.py  demo_lattice_fill.py  demo_lattice_invert.py  demo_lattice_rotation.py  demo_lattice_twotables.py  demo_stream.py  demo_stream_columns.py  demo_stream_ncolumns.py
tests/: __init__.py  data.py  test_camelot.py  test_cli.py  test_common.py  test_data.py  test_errors.py  test_lattice.py  test_plotting.py  test_stream.py
tools/: camelot
(+420 files in other folders)
