[metadata]
name = camelot-py
version = attr: __version__
description = PDF Table Extraction for Humans.
url = https://camelot-py.readthedocs.io/
author = Vinayak Mehta
author_email = vmehta94@gmail.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = find:
install_requires =
    chardet>=3.0.4
    click>=6.7
    numpy>=1.13.3
    openpyxl>=2.5.8
    pandas>=0.23.4
    pdfminer.six>=20170720
    PyPDF2>=1.26.0

[options.packages.find]
    exclude = 
        tests

[options.entry_points]
console_scripts = camelot = camelot.cli:cli

[options.extras_require]
cv = opencv-python>=3.4.2.17
all =
    opencv-python>=3.4.2.17
    matplotlib>=2.2.3
dev =
    codecov>=2.0.15
    pytest>=3.8.0
    pytest-cov>=2.6.0
    pytest-mpl>=0.10
    pytest-runner>=4.2
    Sphinx>=1.7.9
    opencv-python>=3.4.2.17
    matplotlib>=2.2.3
plot = matplotlib>=2.2.3


[aliases]
test=pytest

[tool:pytest]
addopts = --verbose --cov-config .coveragerc --cov-report term --cov-report xml --cov=camelot --mpl
python_files = tests/test_*.py
